add three button to control the background color

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="theme">
+        <button value="dark">dark</button>
+        <button value="calm">calm</button>
+        <button value="light">light</button>
+    </div>    
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
   <div class="controls">
